--- a/basic_wallet_p/blockchain_wallet/package.json
+++ b/basic_wallet_p/blockchain_wallet/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
+    "normalize.css": "^8.0.1",
     "prettier": "^1.19.1"
   }
 }
